2020-07-30 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda/geda_dialog_controls.h: Revise LOAD_GEDA_COMBO_STR to
      utilize LOAD_GEDA_TEXT_COMBO and LOAD_COMBO_STR to utilize GTK_LOAD_COMBO.

2020-07-29 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda/geda_dialog_controls.h: Add new macro LOAD_GEDA_COMBO_STR.
      Revise LOAD_GEDA_TEXT_COMBO to utilize gettext. Revise LOAD_COMBO_STR
      to use inline code instead of calling load_combo_str.

2019-11-07 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda/geda_dialog_controls.h: Remove unused second argument from
      create_geda_switch() in EDA_SWITCH and GSCHEM_SWITCH macros.

2019-09-19 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda/geda_toolbars.h: Update geda_toolbar_append_element argument
      GEDA_TOOLBAR_CHILD_RADIOBUTTON in TOOLBAR_GSCHEM_RADIO_ELEMENT, and
      replace cast GtkSignalFunc with GCallback.

2019-09-11 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda/geda_dialog_controls.h: Substitute geda_adjustment_new
      for gtk_adjustment_new in GTK_NUMERIC_SPIN and GEDA_NUMERIC_SPIN
      macros in order to eliminate the use of GtkObject pointers.

2019-08-07 Wiley E. Hill <wileyhill@gmail.com>

    * .travis.yml: Travis CI released an update to their Xenial build
      environment, which introduced a new way to start up XVFB for front
      end builds. Unfortunately, they broke all existing builds based on
      their documentation. Revised by removing the before_script section
      that started xvfb and switched to using the new syntax.

2019-07-23 Wiley E. Hill <wileyhill@gmail.com>

    * README: Add libgedathonto the major components section, fix a couple
      of spelling/typo errors.

2019-07-22 Wiley E. Hill <wileyhill@gmail.com>

    * README: Update lex tool URL, adjust paragraph format; line wrapping.
      Update Automake version to the actual version required (1.9.6). Add
      libgedacolor to the major components section.
