@@ -1,3 +1,8 @@
+2020-08-31 Wiley E. Hill <wileyhill@gmail.com>
+
+    * include/geda/geda_toolbars.h: Remove macros GSCHEM_TOPLEVEL and
+      TOOLBAR_BUTTON_DATA.
+
 2020-07-30 Wiley E. Hill <wileyhill@gmail.com>
 
     * include/geda/geda_dialog_controls.h: Revise LOAD_GEDA_COMBO_STR to
